boreal/tests/assets/invalid_files/parsing/string_modifier_incompatible7.yar
rule a {
    strings:
        $a = "a" fullword wide base64wide private
    condition:
        $a
}
